--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -27,7 +27,6 @@ span {
   height: 100vh;
   position: fixed;
   top: 0;
-  left: 0;
 }
 
 .pages-container {
