--- a/sass/components/_thumbnail-grid.scss
+++ b/sass/components/_thumbnail-grid.scss
@@ -1,7 +1,7 @@
 .thumbnail-grid {
   display: grid;
 
-  grid-template-columns: repeat(auto-fill, minmax(18.7rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(18.5rem, 1fr));
   gap: 0.8rem;
 
   &__item-box {
