--- a/sass/pages/_album.scss
+++ b/sass/pages/_album.scss
@@ -1,3 +1,4 @@
-// #page-album {
-//   display: block;
-// }
+#page-album {
+  display: block;
+  width: 100vw;
+}
